# baleen

./: .gitignore  LICENSE  README.md  _baleen.cpp  allocation.cpp  allocation.h  baleen.cpp  build.sh  extensions.h  language.cpp  makefile  object.cpp  object.h  registry.cpp  registry.h  utilities.cpp
example-program/: Cargo.toml  build.rs  library.c
example-program/src/: main.rs
foreign-function-finder/: Cargo.toml  install.sh
foreign-function-finder/binary/: Cargo.toml
foreign-function-finder/binary/src/: main.rs
foreign-function-finder/driver/: Cargo.toml
foreign-function-finder/driver/src/: analysis.rs  main.rs  utils.rs
include/: allocation.h  extensions.h  instrumentation.h  language.h  logger.h  memory.h  object.h  registry.h  statistics.h  types.h  utilities.h
src/: allocation.cpp  baleen.cpp  extensions.cpp  instrumentation.cpp  language.cpp  logger.cpp  main.cpp  memory.cpp  object.cpp  registry.cpp  statistics.cpp  utilities.cpp
