[workspace]
members = ["binary", "driver"]
resolver = "2"

[workspace.package]
edition = "2021"



[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.28", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8.20"
simplelog = "0.12"
log = "0.4"
itertools = "0.14.0"